<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:circle="http://schemas.android.com/apk/res-auto"
    android:id="@+id/report_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:weightSum="3">
    <!-- <include
         android:id="@+id/toolbar_actionbar"
         layout="@layout/toolbar_default"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:background="#008A97"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center">

            <net.m3aak.parentapp.MyWidgets.CircleImageView
                android:id="@+id/child_img"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/profile_big"
                circle:border_color="#000000"
                circle:border_width="1dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1">


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/child_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="Mohammad Ahmad"
                android:textColor="#ffffff" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.2"
        android:background="#F5F5F5"
        android:fadeScrollbars="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/first_name"
                android:textColor="@color/green"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/Fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:text="Mohammad Ahmad"
                android:textColor="#000000"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dip"
                android:background="#c7c7c7" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/father_name"
                android:textColor="@color/green"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/Fathername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:text="Mohammad Ahmad"
                android:textColor="#000000"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dip"
                android:background="#c7c7c7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/grand_name"
                android:textColor="@color/green"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/Grandname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:text="Mohammad Ahmad"
                android:textColor="#000000"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dip"
                android:background="#c7c7c7" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/family_name"
                android:textColor="@color/green"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/FamilyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:text="Mohammad Ahmad"
                android:textColor="#000000"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dip"
                android:background="#c7c7c7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/gender"
                android:textColor="@color/green"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/Gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:text="Mohammad Ahmad"
                android:textColor="#000000"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dip"
                android:background="#c7c7c7" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/class_"
                android:textColor="@color/green"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/Class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:text="Mohammad Ahmad"
                android:textColor="#000000"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dip"
                android:background="#c7c7c7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/birth_date"
                android:textColor="@color/green"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/DateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:text="Mohammad Ahmad"
                android:textColor="#000000"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dip"
                android:background="#c7c7c7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/nationality"
                android:textColor="@color/green"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/Nationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:text="Mohammad Ahmad"
                android:textColor="#000000"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dip"
                android:background="#c7c7c7" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="16dp"
                android:text="@string/blood_type"
                android:textColor="@color/green"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/bloodtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="2dp"
                android:text="Mohammad Ahmad"
                android:textColor="#000000"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dip"
                android:background="#c7c7c7" />

            <fragment
                android:id="@+id/map"
                class="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>